# rusty_static_website

./: .gitignore  LICENSE  README.md
homepage/homepageBinary/: Dockerfile  rust-depends.sh
homepage/rust-static-server/: Cargo.toml
homepage/rust-static-server/src/: main.rs
homepage/src/: index.html
homepage/src/css/: style.css
homepage/src/js/: main.js
